--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -7,7 +7,7 @@
     "languageSelector": "Language"
   },
   "home": {
-    "title": "VieVlog IT Learning",
+    "title": "VieLang IT Learning",
     "description": "Access high-quality programming tutorials, coding lessons, and developer resources. Learn from expert instructors and grow your tech skills.",
     "learnToCode": "Learn to Code",
     "forFree": "for Free",
@@ -156,7 +156,7 @@
     "community": "Community",
     "chatWithUs": "Chat Support",
     "discussions": "Discussions",
-    "aboutUs": "About VieVlog",
+    "aboutUs": "About VieLang",
     "contact": "Contact",
     "privacy": "Privacy Policy",
     "terms": "Terms of Service",
