--- a/public/locales/ko/common.json
+++ b/public/locales/ko/common.json
@@ -26,7 +26,7 @@
     "videoTutorialsDesc": "시각적 학습자를 위한 포괄적인 비디오 가이드를 시청하세요",
     "structuredLearning": "체계적 학습",
     "structuredLearningDesc": "초급부터 고급까지 선별된 로드맵을 따라가세요",
-    "title": "VieVlog IT 학습",
+    "title": "VieLang IT 학습",
     "description": "고품질 프로그래밍 튜토리얼, 코딩 레슨, 개발자 리소스에 액세스하세요. 전문 강사로부터 배우고 기술 스킬을 성장시키세요.",
     "viewAllPosts": "모든 게시글 보기",
     "watchVideos": "비디오 보기",
@@ -92,7 +92,7 @@
     "community": "커뮤니티",
     "chatWithUs": "채팅 지원",
     "discussions": "토론",
-    "aboutUs": "VieVlog 소개",
+    "aboutUs": "VieLang 소개",
     "contact": "연락처",
     "privacy": "개인정보 보호정책",
     "terms": "서비스 약관",
