--- a/public/locales/vi/common.json
+++ b/public/locales/vi/common.json
@@ -27,7 +27,7 @@
     "videoTutorialsDesc": "Xem hướng dẫn video toàn diện cho người học trực quan",
     "structuredLearning": "Học Có Cấu Trúc",
     "structuredLearningDesc": "Theo dõi lộ trình được tuyển chọn từ cơ bản đến nâng cao",
-    "title": "VieVlog Học Lập Trình",
+    "title": "VieLang Học Lập Trình",
     "description": "Khám phá hướng dẫn lập trình chất lượng cao, bài học lập trình và tài nguyên cho nhà phát triển. Học từ các giảng viên chuyên gia và phát triển kỹ năng công nghệ.",
     "viewAllPosts": "Xem Tất Cả Bài Viết",
     "watchVideos": "Xem Video",
@@ -156,7 +156,7 @@
     "community": "Cộng Đồng",
     "chatWithUs": "Hỗ Trợ Trò Chuyện",
     "discussions": "Thảo Luận",
-    "aboutUs": "Về VieVlog",
+    "aboutUs": "Về VieLang",
     "contact": "Liên Hệ",
     "privacy": "Chính Sách Bảo Mật",
     "terms": "Điều Khoản Dịch Vụ",
